deploy/ingress.service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinger-ingress-service
  namespace: pinger
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
    - host: pinger.fictionaldev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pinger-cluster-ip-service
                port:
                  number: 3000
